# emg-receiver

./: .gitignore  LICENSE  README.md  pyproject.toml
src/emg_receiver/: __init__.py  cli.py  listener.py
