[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emg-receiver"
version = "0.1.0"
description = "Passive UDP EMG receiver/logger (portable; ROS-agnostic)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
emg-listen = "emg_receiver.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
